CREATE TABLE account
(
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    bank_id        BIGINT                                  NOT NULL,
    account_number VARCHAR(255)                            NOT NULL,
    CONSTRAINT pk_account PRIMARY KEY (id)
);

CREATE TABLE bank
(
    id   BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name VARCHAR(255)                            NOT NULL,
    CONSTRAINT pk_bank PRIMARY KEY (id)
);

CREATE TABLE category
(
    id   BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name VARCHAR(255)                            NOT NULL,
    CONSTRAINT pk_category PRIMARY KEY (id)
);

CREATE TABLE transaction
(
    id                  BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    person_type         VARCHAR(255)                            NOT NULL,
    operation_datetime  TIMESTAMP WITHOUT TIME ZONE             NOT NULL,
    transaction_type    VARCHAR(255)                            NOT NULL,
    comment             TEXT,
    amount              DECIMAL(15, 2)                          NOT NULL,
    status              VARCHAR(255)                            NOT NULL,
    sender_bank_id      BIGINT                                  NOT NULL,
    sender_account_id   BIGINT                                  NOT NULL,
    receiver_bank_id    BIGINT                                  NOT NULL,
    receiver_account_id BIGINT                                  NOT NULL,
    receiver_inn        VARCHAR(255)                            NOT NULL,
    category_id         BIGINT                                  NOT NULL,
    receiver_phone      VARCHAR(255),
    CONSTRAINT pk_transaction PRIMARY KEY (id)
);

CREATE TABLE users
(
    id       BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    username VARCHAR(255)                            NOT NULL,
    password VARCHAR(255)                            NOT NULL,
    role     VARCHAR(255)                            NOT NULL,
    CONSTRAINT pk_users PRIMARY KEY (id)
);

ALTER TABLE users
    ADD CONSTRAINT uc_users_username UNIQUE (username);

ALTER TABLE account
    ADD CONSTRAINT FK_ACCOUNT_ON_BANK FOREIGN KEY (bank_id) REFERENCES bank (id);

ALTER TABLE transaction
    ADD CONSTRAINT FK_TRANSACTION_ON_CATEGORY FOREIGN KEY (category_id) REFERENCES category (id);

ALTER TABLE transaction
    ADD CONSTRAINT FK_TRANSACTION_ON_RECEIVER_ACCOUNT FOREIGN KEY (receiver_account_id) REFERENCES account (id);

ALTER TABLE transaction
    ADD CONSTRAINT FK_TRANSACTION_ON_RECEIVER_BANK FOREIGN KEY (receiver_bank_id) REFERENCES bank (id);

ALTER TABLE transaction
    ADD CONSTRAINT FK_TRANSACTION_ON_SENDER_ACCOUNT FOREIGN KEY (sender_account_id) REFERENCES account (id);

ALTER TABLE transaction
    ADD CONSTRAINT FK_TRANSACTION_ON_SENDER_BANK FOREIGN KEY (sender_bank_id) REFERENCES bank (id);